# scrum-discord-bot

./: Cargo.toml  docker-compose.yaml
.github/workflows/: ci.yaml
config/: base.yaml  local.yaml
deploy/: grafana-datasource.yaml  loki.yaml  otel-collector.yaml  prometheus.yaml  tempo.yaml
src/: configuration.rs  lib.rs
src/drivers/http/: mod.rs
src/drivers/http/middlewares/: mod.rs
src/observability/: log.rs  metrics.rs  mod.rs  trace.rs  tracing.rs
