[package]
name = "scrum-discord-bot"
version = "0.1.0"
edition = "2021"
authors = ["Said Rodrigues <coderflemis@gmail.com>"]

[lib]
path = "src/lib.rs"


[[bin]]
name = "http"
doc = false
path = "src/bin/http.rs"

[dependencies]
anyhow = "1.0.89"
config = { version = "0.14", default-features = false, features = ["yaml"] }
mongodb = { version = "3.1.0", features = ["tracing-unstable"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
thiserror = "1.0.64"
