[package]
name = "scrum-discord-bot"
version = "0.1.0"
edition = "2021"
authors = ["Said Rodrigues <coderflemis@gmail.com>"]

[lib]
path = "src/lib.rs"


[[bin]]
name = "http"
doc = false
path = "src/bin/http.rs"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
axum-tracing-opentelemetry = "0.21.1"
config = { version = "0.14", default-features = false, features = ["yaml"] }
mimalloc = "0.1.43"
mongodb = { version = "3.1.0", features = ["tracing-unstable"] }
once_cell = "1.20.2"
opentelemetry = "0.26.0"
opentelemetry-appender-tracing = "0.26.0"
opentelemetry-otlp = "0.26.0"
opentelemetry-semantic-conventions = "0.26.0"
opentelemetry-stdout = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
prometheus-client = "0.22.3"
prometheus-client-derive-encode = "0.4.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["timeout", "validate-request", "normalize-path", "trace", "compression-full", "catch-panic"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"]}

[profile.release]
debug = false
lto = "fat"
codegen-units = 16
split-debuginfo = "off"
panic = "abort"
